--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Jonathan Gazeley <camerahub@jonathangazeley.com>"]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://camerahub.info/"
-repository = "https://github.com/djjudas21/camerahub"
+repository = "https://github.com/camerahub/camerahub"
 packages = [
     { include = "camerahub" },
     { include = "schema" },
