--- a/.pylintrc
+++ b/.pylintrc
@@ -29,6 +29,7 @@ limit-inference-results=100
 # List of plugins (as comma separated values of python modules names) to load,
 # usually to register additional checkers.
 load-plugins=pylint_django
+django-settings-module=camerahub.settings
 
 # Pickle collected data for later comparisons.
 persistent=yes
