--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Jonathan Gazeley <camerahub@jonathangazeley.com>"]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://camerahub.info/"
-repository = "https://github.com/djjudas21/camerahub"
+repository = "https://github.com/camerahub/camerahub"
 packages = [
     { include = "camerahub" },
     { include = "schema" },
@@ -28,7 +28,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.8"
 Django = "^2.2.13"
 pytz = "*"
 django-money = "^0.15"
