--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
         id: cached-poetry-dependencies
         uses: actions/cache@v2
         with:
-          path: .venv
+          path: .poetryvenv
           key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       # install dependencies if cache does not exist
       - name: Install dependencies
@@ -75,7 +75,7 @@ jobs:
         id: cached-poetry-dependencies
         uses: actions/cache@v2
         with:
-          path: .venv
+          path: .poetryvenv
           key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       # install dependencies if cache does not exist
       - name: Install dependencies
