--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         uses: snok/install-poetry@v1.1.1
         with:
           virtualenvs-create: true
-          virtualenvs-in-project: true
+          virtualenvs-in-project: false
       # load cached venv if cache exists
       - name: Load cached venv
         id: cached-poetry-dependencies
