--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ django-geoposition-2 = "^0.3.11"
 django-leaflet = "^0.27.1"
 djangorestframework = "^3.12.1"
 django-dbbackup = "^3.3.0"
+django-star-ratings = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
