--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ django-geoposition-2 = "^0.3.11"
 django-leaflet = "^0.27.1"
 djangorestframework = "^3.12.1"
 django-dbbackup = "^3.3.0"
-django-star-ratings = "^0.9.1"
+django-star-ratings = "0.9.0"
 drf-generators = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
