--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ django-star-ratings = "0.9.0"
 drf-generators = "^0.5.0"
 pyyaml = "^5.4.1"
 uritemplate = "^3.0.1"
+drf-multiple-serializer = "^0.2.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
