--- a/.pylintrc
+++ b/.pylintrc
@@ -146,7 +146,8 @@ disable=print-statement,
         no-init,
         too-many-lines,
         arguments-differ,
-        signature-differs
+        signature-differs,
+	duplicate-code
         
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
