--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ pyyaml = "^5.4.1"
 uritemplate = "^3.0.1"
 drf-multiple-serializer = "^0.2.3"
 django-health-check = "^3.16.3"
+django-clear-cache = "^0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
