Enable django-speedinfo profiler

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ uritemplate = "^3.0.1"
 drf-multiple-serializer = "^0.2.3"
 django-health-check = "^3.16.3"
 django-clear-cache = "^0.3"
+django-speedinfo = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
