Configure Harbor registry properly

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           username: robot$camerahub
           password: ${{ secrets.HARBOR_PASSWORD }}
-          repository: registry.apps.gazeley.uk/camerahub/camerahub
+          registry: registry.apps.gazeley.uk
+          repository: camerahub/camerahub
           tag_with_ref: true
           tags: latest
