Update various Python modules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,31 +38,31 @@ uWSGI = "^2.0.0"
 django-tables2 = "^2.1.1"
 django-crispy-forms = "^1.9.0"
 django-autosequence = "^0"
-django-sendgrid-v5 = "^0"
+django-sendgrid-v5 = "*"
 django-registration = "^3.0"
 django-fullurl = "^1"
-django-filter = "^2.2"
+django-filter = "*"
 awesome-slugify = "^1.6.5"
 django-watson = "^1.5.5"
-django-taggit = "^1"
+django-taggit = "^2"
 poetry-version = "*"
 django-prometheus = "^2.0.0"
-django-simple-history = "^2.11.0"
+django-simple-history = "^3"
 django-versatileimagefield = "^2.0"
 numpy = "^1.19.1"
 django-social-share = "^2.0.0"
-django-countries = "^6.1.3"
-django-2-collectionfield = "^0.0.4"
+django-countries = "^7"
+django3-collectionfield = "^1"
 django-autocomplete-light = "^3.8.1"
-django-bootstrap-datepicker-plus = "^3.0.5"
+django-bootstrap-datepicker-plus = "^4"
 django-geoposition-2 = "^0.3.11"
 django-leaflet = "^0.27.1"
 djangorestframework = "^3.12.1"
 django-dbbackup = "^3.3.0"
 django-star-ratings = "0.9.0"
 drf-generators = "^0.5.0"
-pyyaml = "^5.4.1"
-uritemplate = "^3.0.1"
+pyyaml = "^6"
+uritemplate = "^4"
 drf-multiple-serializer = "^0.2.3"
 django-health-check = "^3.16.3"
 django-clear-cache = "^0.3"
