--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ django-filter = "*"
 awesome-slugify = "^1.6.5"
 django-watson = "^1.5.5"
 django-taggit = "^2"
-poetry-version = "*"
+poetry-version = "^0.2.0"
 django-prometheus = "^2.0.0"
 django-simple-history = "^3"
 django-versatileimagefield = "^2.0"
