--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ django-clear-cache = "^0.3"
 django-speedinfo = "^2.0.2"
 django-settings-export = "^1.2.1"
 python-memcached = "^1.59"
+platformdirs = "^2.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
