--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ django-speedinfo = "^2.0.2"
 django-settings-export = "^1.2.1"
 python-memcached = "^1.59"
 platformdirs = "^2.5.1"
+django-colorfield = "^0.6.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
