--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,10 +46,12 @@ awesome-slugify = "^1.6.5"
 django-watson = "^1.5.5"
 django-taggit = "^2"
 poetry-version = "^0.2.0"
+django-simple-history = "^3"
 django-versatileimagefield = "^2.0"
 numpy = "^1.19.1"
 django-social-share = "^2.0.0"
 django-countries = "^7"
+django3-collectionfield = "^1"
 django-autocomplete-light = "^3.8.1"
 django-bootstrap-datepicker-plus = "^4"
 django-geoposition-2 = "^0.3.11"
