--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ django-health-check = "^3.16.3"
 django-settings-export = "^1.2.1"
 platformdirs = "^2.5.1"
 django-colorfield = "^0.6.3"
+django-prometheus = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
