--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,6 @@ Django = "^3"
 pytz = "*"
 django-money = "^1.2"
 django-choices = "^1.7.0"
-psycopg2-binary = { version = "^2.8", optional = true }
 django-currentuser = "^0.5"
 uWSGI = "^2.0.0"
 django-tables2 = "^2.1.1"
@@ -67,6 +66,7 @@ django-settings-export = "^1.2.1"
 platformdirs = "^2.5.1"
 django-colorfield = "^0.6.3"
 django-prometheus = "^2.2.0"
+psycopg = "^3.1.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -75,7 +75,7 @@ autopep8 = "^1.5.4"
 pylint = "^2"
 
 [tool.poetry.extras]
-pgsql = ["psycopg2-binary"]
+pgsql = ["psycopg"]
 
 [build-system]
 requires = ["poetry>=0.12"]
