--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ django-settings-export = "^1.2"
 platformdirs = "^2.5"
 django-colorfield = "^0.7"
 django-prometheus = "^2.2"
-psycopg = "^3.1"
+psycopg2 = "^2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -75,7 +75,7 @@ autopep8 = "^1.5.4"
 pylint = "^2"
 
 [tool.poetry.extras]
-pgsql = ["psycopg"]
+pgsql = ["psycopg2"]
 
 [build-system]
 requires = ["poetry>=0.12"]
