--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,11 +71,15 @@ psycopg2 = "^2"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pylint-django = "^2.5.3"
-autopep8 = "^1.5.4"
+autopep8 = "^2.0.0"
 pylint = "^2"
 
 [tool.poetry.extras]
 pgsql = ["psycopg2"]
+
+[tool.poetry.group.dev.dependencies]
+sphinx = "^6.2.1"
+myst-parser = "^1.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
