Disable use-dict-literal for iommi

--- a/.pylintrc
+++ b/.pylintrc
@@ -40,3 +40,4 @@ disable=invalid-name,
     useless-object-inheritance,
     wildcard-import,
     attribute-defined-outside-init,
+    use-dict-literal,
