Change probe behaviour

--- a/charts/camerahub/templates/deployment.yaml
+++ b/charts/camerahub/templates/deployment.yaml
@@ -37,7 +37,8 @@ spec:
               protocol: TCP
           {{- if .Values.livenessProbe.enabled }}
           livenessProbe:
-            tcpSocket:
+            httpGet:
+              path: /health/
               port: app-port
             initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
