--- a/charts/camerahub/Chart.yaml
+++ b/charts/camerahub/Chart.yaml
@@ -7,7 +7,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.10.34
+version: 0.10.35
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -35,3 +35,7 @@ sources:
 maintainers:
   - name: djjudas21
 icon: https://raw.githubusercontent.com/camerahub/camerahub/master/schema/static/svg/camera.svg
+annotations:
+  artifacthub.io/changes: |-
+    - kind: changed
+      description: Improve probe behaviour
