--- a/charts/camerahub/templates/job.yaml
+++ b/charts/camerahub/templates/job.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     {{- include "camerahub.labels" . | nindent 4 }}
 spec:
+  ttlSecondsAfterFinished: 100
   backoffLimit: {{ .Values.migrations.backoffLimit }}
   template:
     metadata:
